# MultiEd

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
.github/workflow_scripts/: setup_build.py
.github/workflows/: build.yml  patch-libs.yml
components/: MultiEdWindow.cpp  MultiEdWindow.h
components/BrushProperties/: BrushProperties.h  TreeProperty.h
components/LogWindow/: LogWindow.cpp
components/Menu/: ActorMenu.h  BaseMenu.h  BrushMenu.cpp  BrushMenu.h  BuildMenu.cpp  BuildMenu.h  EditMenu.h  FileMenu.cpp  FileMenu.h  HelpMenu.h  ToolsMenu.cpp  ToolsMenu.h  ViewMenu.h
components/Preferences/: Preferences.cpp
components/SideBar/: BaseBar.cpp  BaseBar.h  BrushBar.cpp  CSGBar.cpp  CSGBar.h  ClipBar.h  MiscBar.cpp  MiscBar.h  ModeBar.h  OrderedSideBar.cpp  OrderedSideBar.h  SidebarButton.cpp  SidebarButton.h
components/ToolBar/: ToolBar.h  Toolbar.cpp
components/Viewport/: Viewport.cpp  Viewport.h  ViewportAction.h  ViewportSplitter.cpp  ViewportSplitter.h  ViewportSplitterContainer.cpp  ViewportSplitterContainer.h
helpers/: Defines.h  SDLHelper.cpp
patches/: add-custom-user-input-events-sdldrv.patch  add-getlastinputstate-sdldrv.patch  add-temprenderdev-sdldrv-from-oldunreal.patch  allow-per-viewport-input-sdldrv.patch  fix-opengl.patch  readme.md
services/: EditorAPI.cpp  EditorAPI.h  HelperAPI.cpp  Services.h
src/MultiEd/: CMakeLists.txt  FFeedbackContextSDL.h  FOutputDeviceSDLError.h  main.cpp
src/MultiEd/components/: IComponent.h  MultiEdWindow.cpp  MultiEdWindow.h  TreeDelegates.h
src/MultiEd/components/BrushProperties/: BrushProperties.cpp  TreeProperty.h
src/MultiEd/components/Menu/: ActorMenu.cpp  BaseMenu.cpp  BrushMenu.h  EditMenu.cpp  FileMenu.cpp  FileMenu.h  HelpMenu.cpp  HelpMenu.h  ViewMenu.cpp  ViewMenu.h
src/MultiEd/components/Preferences/: Preferences.cpp  Preferences.h  PreferencesTree.cpp  PreferencesTree.h
src/MultiEd/components/SideBar/: BrushBar.h  ClipBar.cpp  ClipBar.h  ModeBar.cpp  OrderedSideBar.h  SidebarButton.h
src/MultiEd/components/Viewport/: Viewport.cpp  ViewportButton.h  ViewportSplitter.h  ViewportSplitterContainer.h
src/MultiEd/helpers/: Defines.cpp  SDLHelper.h  UnrealHelper.cpp  UnrealHelper.h
src/MultiEd/services/: EditorAPI.cpp  EditorAPI.h  HelperAPI.h
src/MultiEd/ue/: UnrealGlue.cpp  UnrealGlue.h
src/QT6Drv/: CMakeLists.txt
src/QT6Drv/Inc/: QT6Drv.h
src/QT6Drv/Src/: QT6Client.cpp  QT6Drv.cpp  QT6Viewport.cpp
src/QT6Launch/: CMakeLists.txt
src/QT6Launch/Src/: main.cpp
src/QT6Shared/: CMakeLists.txt
src/QT6Shared/qt/LogWindow/: LogWindow.cpp  LogWindow.h
src/QT6Shared/ue/: FFeedbackContextSDL.h  FOutputDeviceSDLError.h  Launch.cpp  Launch.h  LogWindow.h
ue/: UnrealGlue.cpp  UnrealGlue.h
